--- a/index.html
+++ b/index.html
@@ -10,10 +10,22 @@
     <label for="lab-nomusr">Ingrese su nombre de Usuario..:</label>
     <input type="text" name="" id="lab-nomusr">
     <br><br>
-    <button onclick ="datosIngresados()">Presione para registro</button>
+    <label for="lab-edad">Ingrese su Edad.........................:</label>
+    <input type="number" name="" id="lab-edad">
+    <br><br>
+    <label for="lab-mail">Ingrese su email........................:</label>
+    <input type="email" name="" id="lab-mail">
+    <br><br>
+    <label for="lab-dni">Ingrese su DNI..........................:</label>
+    <input type="number" name="" id="lab-dni">
+    <br><br>
+    <button onclick ="datosIngresados()">Verifique los datos y oprima para su registro</button>
     <br><br>
     <p id="mi-msg1"></p>
     <p id="mi-msg2"></p>
+    <p id="mi-msg3"></p>
+    <p id="mi-msg4"></p>
+    <p id="mi-msg5"></p>
     <script src="retquin_1.js"></script>
 </body>
 </html>
