--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <img id="mi-img" widht="300" height = "150px" src="" alt="">
+    <br><br>
     <label for="lab-nomusr">Ingrese su nombre de Usuario..:</label>
     <input type="text" name="" id="lab-nomusr">
     <br><br>
@@ -19,7 +21,7 @@
     <label for="lab-dni">Ingrese su DNI..........................:</label>
     <input type="number" name="" id="lab-dni">
     <br><br>
-    <button onclick ="datosIngresados()">Verifique los datos y oprima para su registro</button>
+    <button onclick ="datosIngresados()">Verifique los datos y oprima aquí para su registro</button>
     <br><br>
     <p id="mi-msg1"></p>
     <p id="mi-msg2"></p>
