--- a/index.html
+++ b/index.html
@@ -9,20 +9,22 @@
 <body>
     <img id="mi-img" widht="300" height = "150px" src="" alt="">
     <br><br>
-    <label for="lab-nomusr">Ingrese su nombre de Usuario..:</label>
-    <input type="text" name="" id="lab-nomusr">
+    <label for="lab-nomusr"></label>Ingrese su nombre de Usuario.:</label>
+    <input type="text" name="" id="lab-nomusr" style="width:160px">
     <br><br>
-    <label for="lab-edad">Ingrese su Edad.........................:</label>
-    <input type="number" name="" id="lab-edad">
+    <label for="lab-edad">Ingrese su Edad.......................:</label>
+    <input type="number" name="" id="lab-edad"style="width:160px">
     <br><br>
-    <label for="lab-mail">Ingrese su email........................:</label>
-    <input type="email" name="" id="lab-mail">
+    <label for="lab-mail">Ingrese su email.......................:</label>
+    <input type="email" name="" id="lab-mail"style="width:160px">
     <br><br>
-    <label for="lab-dni">Ingrese su DNI..........................:</label>
-    <input type="number" name="" id="lab-dni">
+    <label for="lab-dni">Ingrese su DNI........................:</label>
+    <input type="number" name="" id="lab-dni"style="width:160px">
     <br><br>
-    <button onclick ="datosIngresados()">Verifique los datos y oprima aquí para su registro</button>
+    <label for="lab-pass">Ingrese su "clave secreta"........:</label>
+    <input type="password" name="" id="lab-pass"style="width:160px">
     <br><br>
+    <button onclick ="datosIngresados()">Verifique los datos y presiones aquí para su registro</button>
     <p id="mi-msg1"></p>
     <p id="mi-msg2"></p>
     <p id="mi-msg3"></p>
