--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <label for="lab-edad">Ingrese su Edad.......................:</label>
     <input type="number" name="" id="lab-edad"style="width:160px">
     <br><br>
-    <label for="lab-mail">Ingrese su email.......................:</label>
+    <label for="lab-mail">Ingrese su email......................:</label>
     <input type="email" name="" id="lab-mail"style="width:160px">
     <br><br>
     <label for="lab-dni">Ingrese su DNI........................:</label>
     <input type="number" name="" id="lab-dni"style="width:160px">
     <br><br>
-    <label for="lab-pass">Ingrese su "clave secreta"........:</label>
+    <label for="lab-pass">Ingrese su "clave secreta".......:</label>
     <input type="password" name="" id="lab-pass"style="width:160px">
     <br><br>
-    <button onclick ="datosIngresados()">Verifique los datos y presiones aquí para su registro</button>
+    <button onclick ="datosIngresados()">Verifique los datos y presione aquí para su registro</button>
     <p id="mi-msg1"></p>
     <p id="mi-msg2"></p>
     <p id="mi-msg3"></p>
